[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Pictures/background.png" type="Texture" id=1]
[ext_resource path="res://Assets/Pictures/gameover.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sounds/gameover.mp3" type="AudioStream" id=3]
[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=4]

[node name="GameOver" type="Node2D"]
position = Vector2( 500, 196 )
script = ExtResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true
bus = "Music"

[node name="Background" type="Sprite" parent="."]
position = Vector2( 155, 198 )
scale = Vector2( 8.38125, 11.5153 )
texture = ExtResource( 1 )

[node name="Game over" type="Sprite" parent="."]
position = Vector2( 0, 7.62939e-05 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.0
margin_top = 122.0
margin_right = 34.0
margin_bottom = 271.0

[node name="Restart" type="Button" parent="VBoxContainer"]
margin_right = 67.0
margin_bottom = 20.0
text = "Reiniciar"

[node name="Menu" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 67.0
margin_bottom = 44.0
text = "Menu"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 67.0
margin_bottom = 68.0
text = "Sair"

[connection signal="ready" from="." to="." method="_on_GameOver_ready"]
[connection signal="ready" from="Game over" to="." method="_on_Game_over_ready"]
[connection signal="ready" from="VBoxContainer" to="." method="_on_VBoxContainer_ready"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="ready" from="VBoxContainer/Restart" to="." method="_on_Restart_ready"]
[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
[connection signal="ready" from="VBoxContainer/Menu" to="." method="_on_Menu_ready"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="ready" from="VBoxContainer/Quit" to="." method="_on_Quit_ready"]
